<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/bodyScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                layout="@layout/banner" />

            <LinearLayout
                android:id="@+id/loginHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/container_1_header"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/loginTitle"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textColor="@color/theme_font_over_contrast"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/container_1_body"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/usernameView"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/username_hint" />

                    <EditText
                        android:id="@+id/passwordView"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/pwd_hint"
                        android:inputType="textPassword" />

                    <TextView
                        android:id="@+id/forgotPasswordView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="20dp"
                        android:clickable="true"
                        android:onClick="forgotPasswordClick"
                        android:text="@string/forgot_pwd"
                        android:textColor="@color/theme_font_over_seconday" />

                    <Button
                        android:id="@+id/loginButton"
                        style="@style/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="onLoginClicked"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/login_button" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/registerBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/theme_secondary"
                android:orientation="vertical"
                android:padding="20dp" >

                <TextView
                    android:id="@+id/registerTitle"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:text="@string/register_title"
                    android:textColor="@color/theme_font_over_seconday" />

                <Button
                    android:id="@+id/registerButton"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onRegisterClicked"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/register_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>